force-app/main/default/objects/Funding_Opportunity_Staging__c/Funding_Opportunity_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is to store funding opps coming from external system as a staging instance eg, Research Professional.</description>
    <label>Funding Opportunity Staging</label>
    <nameField>
        <label>Staging Funding Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Opportunities Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>