force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/Deadline_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Received from Research Professional</description>
    <label>Deadline Forecast</label>
    <type>Checkbox</type>
</CustomField>