force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique Id for the Research Opportunity from Research Professional. Unique Opportunity Id + Deadline</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>