force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Award_Currency__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Award_Currency__c</fullName>
    <label>Award Currency</label>
    <length>32</length>
    <type>Text</type>
</CustomField>