force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Bullet__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Bullet__c</fullName>
    <label>Bullet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>