force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Deadline_Info__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Deadline_Info__c</fullName>
    <label>Deadline Info</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>