force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>