force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Different_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Different_Funder_Name__c</fullName>
    <description>Is true if the Staging record&apos;s Funder Name is different from the related Organisation&apos;s Name</description>
    <formula>!ISBLANK(I_RS_Funding_Opportunity_Record_Id__c) &amp;&amp; 
I_RS_Primary_Funder_Name__c &lt;&gt;  I_RS_Funding_Opportunity_Record_Id__r.I_RS_Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different Funder Name</label>
    <type>Checkbox</type>
</CustomField>