force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Discipline__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Discipline__c</fullName>
    <label>Discipline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>