force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Eligibility_Hosts__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Eligibility_Hosts__c</fullName>
    <label>Eligibility Hosts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>