force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Eligibility_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Eligibility_Region_Code__c</fullName>
    <description>All eligibility region codes for the funding opportunity from Research Professional</description>
    <label>Eligibility Region Code</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>