force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Eligibility_Regions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Eligibility_Regions__c</fullName>
    <description>All eligibility regions for the funding opportunity from Research Professional</description>
    <label>Eligibility Regions</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>