force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Full_Name__c</fullName>
    <label>Full Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>