force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funders_Full_Webpage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funders_Full_Webpage__c</fullName>
    <label>Funders Full Webpage</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>