force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funders_Webpage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funders_Webpage__c</fullName>
    <label>Funders Webpage</label>
    <type>Url</type>
</CustomField>