force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funding_Category_Transformed__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Category_Transformed__c</fullName>
    <description>Apply data transformations to RP Funding Category data</description>
    <formula>SUBSTITUTE(I_RS_Funding_Category__c , &quot;Category&quot;, &quot;Cat&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data transformations applied to Funding Category data</inlineHelpText>
    <label>Funding Category - Transformed</label>
    <type>Text</type>
</CustomField>