force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funding_Opp_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opp_Sync_Error_Message__c</fullName>
    <label>Funding Opportunity Sync Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>