force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funding_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opportunity_Name__c</fullName>
    <formula>IF(ISBLANK(I_RS_Submission_Date__c),

Name, 

LEFT(Name, 67) + &quot; - &quot; + TEXT(I_RS_Submission_Date__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Opportunity Name</label>
    <type>Text</type>
</CustomField>