force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funding_Opportunity_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opportunity_Record_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When syncing to Funding Opportunities in Salesforce, provide newly created Funding Opportunity here</description>
    <label>Funding Opportunity Record Id</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Funding Opportunities Staging</relationshipLabel>
    <relationshipName>Funding_Opportunities_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>