force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Funding_Opportunity_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opportunity_Sync_Status__c</fullName>
    <description>Track progress in terms of syncing to live Funding Opportunity object</description>
    <label>Funding Opportunity Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Region Not Eligible</fullName>
            </value>
            <value>
                <fullName>No Matching Funder in PRIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>