force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Locale__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Locale__c</fullName>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>