force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Primary_Funder_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_Funder_Id__c</fullName>
    <description>Funder Id captured from RP</description>
    <label>Primary Funder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>