force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Primary_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_Funder_Name__c</fullName>
    <description>Primary funder name from research professional</description>
    <label>Primary Funder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>