force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Primary_Funder_Region__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_Funder_Region__c</fullName>
    <description>Funder region received from Research professional</description>
    <label>Primary Funder Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>