force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Primary_Funder_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_Funder_Region_Code__c</fullName>
    <description>Funder region code received from Research Professional</description>
    <label>Primary Funder Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>