force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_PRIME_Ready__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PRIME_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRIME Ready</label>
    <type>Checkbox</type>
</CustomField>