force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Purpose__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>