force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Research_Office_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Office_Due_Date__c</fullName>
    <formula>I_RS_Submission_Date__c - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Office Due Date</label>
    <type>Date</type>
</CustomField>