force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Research_Professional_Full_Webpage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Professional_Full_Webpage__c</fullName>
    <label>Research Professional Full Webpage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>