force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Research_Professional_Webpage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Professional_Webpage__c</fullName>
    <label>Research Professional Webpage</label>
    <type>Url</type>
</CustomField>