force-app/main/default/objects/Funding_Opportunity_Staging__c/fields/I_RS_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submission_Date__c</fullName>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>