force-app/main/default/objects/Funding_Opportunity_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Bullet__c</columns>
    <columns>I_RS_Date_Added__c</columns>
    <columns>I_RS_Discipline__c</columns>
    <columns>I_RS_Funding_Category__c</columns>
    <columns>I_RS_Primary_Funder_Id__c</columns>
    <columns>I_RS_Primary_Funder_Name__c</columns>
    <columns>I_RS_PRIME_Ready__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>