force-app/main/default/objects/Funding_Opportunity_Staging__c/listViews/All_Funding_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Funding_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Bullet__c</columns>
    <columns>I_RS_Date_Added__c</columns>
    <columns>I_RS_Primary_Funder_Name__c</columns>
    <columns>I_RS_Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Opportunities</label>
</ListView>